// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders colored icon 1`] = `
<Text
  allowFontScaling={false}
  style={
    Array [
      Object {
        "color": "red",
        "fontSize": 18,
      },
      undefined,
      Object {
        "fontFamily": "Ionicons",
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      Object {},
    ]
  }
>
  
</Text>
`;

exports[`renders regular icon 1`] = `
<Text
  allowFontScaling={false}
  style={
    Array [
      Object {
        "color": "#FFF",
        "fontSize": 18,
      },
      undefined,
      Object {
        "fontFamily": "Ionicons",
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      Object {},
    ]
  }
>
  
</Text>
`;
